--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
 }
 
 .styled-table thead tr {
-    background-color: #009879;
+    background-color: #f3f3f3;
     color: #ffffff;
     text-align: left;
 }
@@ -30,22 +30,6 @@
     background-color: #f3f3f3;
 }
 
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
 .styled-table tbody tr.active-row {
     font-weight: bold;
-    color: #009879;
-}
-
-.my-slot-animation {
-    --ch: -5;
-    animation: scroll 1s 1s linear forwards;
-}
-
-@keyframes scroll {
-    to {
-        transform: transformY(var(--ch)*100%);
-    }
 }
