--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@ body {
 }
 
 .styled-table thead tr {
-    background-color: #f3f3f3;
+    background-color: #169b68;
     color: #ffffff;
     text-align: left;
 }
@@ -26,12 +26,8 @@ body {
     padding: 12px 15px;
 }
 
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
 .styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+    background-color: #169b68;
 }
 
 .styled-table tbody tr.active-row {
@@ -40,4 +36,8 @@ body {
 
 .-mt-8px {
     margin-top: -8px;
+}
+
+.h-100 {
+    height: 25rem;
 }
